<resources>
    <string name="app_name">KDiyCode</string>

    <!--登录注册-->
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="click_register">没有账号？点击注册</string>
    <string name="username_null">用户名不能为空</string>
    <string name="password_null">密码不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="email_or_username">Email/用户名</string>
    <string name="name_or_password">登录失败,用户名或密码错误</string>

    <!--主页-->
    <string name="news">news</string>
    <string name="projects">projects</string>
    <string name="sites">sites</string>
    <string name="topics">topics</string>
    <string name="pager_empty">阿欧还是空的呢!</string>
    <string name="load_fail_click_retry">加载失败，点击重试</string>
    <string name="load_fail">加载失败</string>
    <string name="load_me_fail">个人加载失败</string>
    
    <!--projects-->
    <string name="download">下载</string>

    <!--WebView-->
    <string name="favorite">收藏</string>
    <string name="save_success">收藏成功</string>

    <!--新建News-->
    <string name="create_news">新建News</string>
    <string name="input_news_info">填写News信息</string>
    <string name="news_title">News标题</string>
    <string name="news_url">News链接</string>
    <string name="required">*</string>
    <string name="news_node">News类别</string>
    <string name="close">关闭</string>
    <string name="submit">提交</string>
    <string name="required_news_title">News 标题不能为空</string>
    <string name="required_news_url">News Url为空或不符合规则</string>
    <string name="required_news_node">请选择Node类别</string>
    <string name="create_news_success">创建News成功,等待审核</string>
    <string name="create_news_fail">创建News失败</string>

    <!--选择node-->
    <string name="confirm">确定</string>
    <string name="load_nodes_list_fail">加载Node列表失败</string>
    <string name="please_choose">请选择</string>

    <!--抽屉-->
    <string name="publishNews">发布news</string>
    <string name="myFavorite">我的收藏</string>
    <string name="upload_pic">上传图片</string>
    <string name="small_tools">小工具</string>
    <string name="utility_fun">实用功能</string>

    <!--用户资料-->
    <string name="email">邮箱</string>
    <string name="level">等级</string>
    <string name="avatar">头像</string>
    <string name="empty">&lt;空&gt;</string>
    <string name="username">用户名</string>
    <string name="create_at">创建时间</string>
    <string name="interface_not_support">接口不支持修改</string>

    <!--Splash-->
    <string name="write_external_storage_deny">拒绝了写外部磁盘的权限</string>
    <string name="write_external_storage_not_ask">写外部磁盘不再询问</string>
    <string name="need_write_external_storage">本应用需要写外部磁盘权限用于收藏</string>
    <string name="cancel">取消</string>
    <string name="toAuth">去授权</string>
    <string name="copy_success">复制成功</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>

    <!--上传照片-->
    <string name="preview">预览</string>
    <string name="image">image</string>
    <string name="all_pic">所有图片</string>
    <string name="choose_pic">选择图片</string>
    <string name="see_large_pic">查看大图</string>
    <string name="click_choose_pic">点击选择图片</string>
    <string name="please_add_pic">请添加图片</string>
    <string name="copy">复制</string>
    <string name="add_pic">添加一张图片</string>

    <!--我的收藏-->
    <string name="favorite_tip">长按复制链接\n左滑右滑删除</string>
    <string name="filter">筛选</string>


</resources>
